refactor: replace collectors with toList